<resources>
    <string name="app_name">NOMAD</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="username">username</string>
    <string name="district">district</string>
    <string name="textview">textview</string>
    <string name="create">Create</string>
    <string name="region">region</string>
    <string name="region_workshop">region_workshop</string>
    <string name="type">type</string>
    <string name="select_code">select_code</string>
    <string name="name">name</string>
    <string name="facility_level">facility_level</string>
    <string name="ownership">ownership</string>
    <string name="functional_status">functional_status</string>
    <string name="record_name">record name</string>
    <string name="category">category</string>
    <string name="condition">condition</string>
    <string name="supplier">supplier</string>
    <string name="department">department</string>
    <string name="select_category">select category</string>
    <string name="select_equipment">Select Equipment</string>
    <string name="department1">department1</string>
    <string name="register">register</string>
    <string name="rsenono_idi_co_ug">rsenono@idi.co.ug</string>
    <string name="new_order_for_managing_anything_data">New Order for Managing Anything Data</string>
    <string name="image">image</string>
    <string name="authority">authority</string>
</resources>