<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ScoreSheetActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <Spinner
        android:id="@+id/equipment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="@string/select_equipment" />

    <EditText
        android:id="@+id/facility1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="facility"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="HardcodedText,InvalidId,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/department2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="@string/department"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/section3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="section"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize" />



    <EditText
        android:id="@+id/condition1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="@string/condition"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inventoryName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="@string/name"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/modelNumber"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="model_no"
        tools:ignore="HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Serial1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:hint="serial"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:hint="description"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="HardcodedText,MissingPrefix,TouchTargetSizeCheck,VisualLintBounds,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/create_btn8"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="create"
        android:textColor="#455A64"
        tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>